Fix Font Awesome icon positioning issues: - Override vertical-align to prevent icon shifts in flex containers - Add inline-flex display with proper centering for search and toggle icons - Fix positioning conflicts between Font Awesome and flexbox layout

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -173,6 +173,10 @@
     .search-icon i {
         font-size: 1.4rem;
         line-height: 1;
+        vertical-align: middle; /* Override Font Awesome vertical-align */
+        display: inline-flex; /* Better flex alignment */
+        align-items: center;
+        justify-content: center;
     }
 
     #search-input:focus {
@@ -216,6 +220,13 @@
 
         .theme-toggle-button:hover i {
             transform: scale(1.1);
+        }
+
+        .theme-toggle-button i {
+            vertical-align: middle; /* Override Font Awesome vertical-align */
+            display: inline-flex; /* Better flex alignment */
+            align-items: center;
+            justify-content: center;
         }
     }
 }
